--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <div class="card mb-4 shadow-sm">
                     <div class="card-header">
                         <h4 id="city-name" class="my-0 font-weight-normal">----</h4>
+                        <h4 id="error" class="my-0 font-weight-normal"></h4>
                     </div>
                     <div class="card-body">
                         <h1 id="weather-type" class="card-title">----</h1>
